src/core/BydaoParser.cpp
// Copyright 2026 Oleh Horshkov
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

#include <QCoreApplication>
#include <QDir>
#include <QDebug>

#include "BydaoScript/BydaoParser.h"
#include "BydaoScript/BydaoIntClass.h"
#include "BydaoScript/BydaoArray.h"
#include "BydaoScript/BydaoReal.h"
#include "BydaoScript/BydaoString.h"
#include "BydaoScript/BydaoBool.h"
#include "BydaoScript/BydaoNull.h"

namespace BydaoScript {

// ============================================================
// КОНСТРУКТОР / ДЕСТРУКТОР
// ============================================================

BydaoParser::BydaoParser(const QVector<BydaoToken>& tokens)
    : m_tokens(tokens)
    , m_pos(0)
    , m_inLoop(false)
    , m_iteratorCounter(0)
{
    if ( ! m_tokens.isEmpty() ) {
        m_current = m_tokens[0];
    }

    // Добавляем пути поиска модулей
    m_modulePaths << ".";
    m_modulePaths << "./modules";
    m_modulePaths << QCoreApplication::applicationDirPath();
    m_modulePaths << QCoreApplication::applicationDirPath() + "/modules";

    // Добавляем константу NULL, чтобы все другие константы имели индекс > 0

    addNullConstant();

    // Добавляем служебную переменную, чтобы все индексы переменных были > 0.
    // TODO: Служебная переменная специального типа, которая содержит информацию
    // о выполняемом скрипте.

    appendVariable(SPECIAL_VAR, true, false);

    // Инициализировать встроенные типы данных

    m_metaData["Int"] = new MetaData( BydaoIntClass::metaData() );
    UsedMetaDataList usedIntList = BydaoIntClass::usedMetaData();
    foreach ( const UsedMetaData& used, usedIntList ) {
        if ( ! m_metaData.contains( used.type ) ) {
            m_metaData[ used.type ] = new MetaData( used.metaData );
        }
    }

    m_metaData["String"] = new MetaData( BydaoString::metaData() );
    UsedMetaDataList usedStringList = BydaoString::usedMetaData();
    foreach ( const UsedMetaData& used, usedStringList ) {
        if ( ! m_metaData.contains( used.type ) ) {
            m_metaData[ used.type ] = new MetaData( used.metaData );
        }
    }

    m_metaData["Real"]   = new MetaData( BydaoReal::metaData() );
    m_metaData["Bool"]   = new MetaData( BydaoBool::metaData() );
    m_metaData["Null"]   = new MetaData( BydaoNull::metaData() );

    m_metaData["Array"]  = new MetaData( BydaoArray::metaData() );
    UsedMetaDataList usedArrayList = BydaoArray::usedMetaData();
    foreach ( const UsedMetaData& used, usedArrayList ) {
        if ( ! m_metaData.contains( used.type ) ) {
            m_metaData[ used.type ] = new MetaData( used.metaData );
        }
    }

    // Список встроенных типов.
    // В виртуальной машине должен быть такой же список в том же порядке.
    m_builtinTypes << "Int" << "Real" << "String"
                   << "Bool" << "Null" << "Array";
}

BydaoParser::~BydaoParser() {
    qDeleteAll( m_metaData );
}

// ============================================================
// РАБОТА С ТАБЛИЦАМИ
// ============================================================

qint16 BydaoParser::addString(const QString& str) {

    auto it = m_stringIndex.find(str);
    if (it != m_stringIndex.end())
        return it.value();

    if (m_stringTable.size() >= 65536) {
        error("String table overflow (max 65536 strings)");
        return 0;
    }

    qint16 index = m_stringTable.size();
    m_stringTable.append(str);
    m_stringIndex[str] = index;
    return index;
}

qint16 BydaoParser::addConstant(const BydaoConstant& c) {
    // Для строк используем специальный ключ
    QString key;
    switch (c.type) {
    case CONST_STRING: key = "s:" + QString::number(c.stringIndex); break;
    case CONST_INT:    key = "i:" + QString::number(c.intValue); break;
    case CONST_REAL:   key = "r:" + QString::number(c.realValue); break;
    case CONST_BOOL:   key = "b:" + QString::number(c.boolValue); break;
    case CONST_NULL:   key = "null"; break;
    default:
        error("Invalid type of constant");
        break;
    }

    if ( ! key.isEmpty() ) {
        auto it = m_constantIndex.find(key);
        if (it != m_constantIndex.end())
            return it.value();
    }

    if (m_constants.size() >= 65536) {
        error("Constant table overflow (max 65536 constants)");
        return 0;
    }

    qint16 index = m_constants.size();
    m_constants.append(c);
    if (!key.isEmpty())
        m_constantIndex[key] = index;
    return index;
}

qint16 BydaoParser::addConstant(qint64 value) {
    return addConstant(BydaoConstant(value));
}

qint16 BydaoParser::addConstant(double value) {
    return addConstant(BydaoConstant(value));
}

qint16 BydaoParser::addConstant(bool value) {
    return addConstant(BydaoConstant(value));
}

qint16 BydaoParser::addConstant(const QString& strValue) {
    qint16 strIndex = addString(strValue);
    return addConstant(BydaoConstant(quint32(strIndex)));
}

qint16 BydaoParser::addNullConstant() {
    return addConstant(BydaoConstant());
}

qint16 BydaoParser::addConstant( const BydaoValue& val ) {
    switch ( val.typeId() ) {
    case TYPE_STRING: return addConstant( val.toString() );
    case TYPE_INT:    return addConstant( val.toInt() );
    case TYPE_REAL:   return addConstant( val.toReal() );
    case TYPE_BOOL:   return addConstant( val.toBool() );
    case TYPE_NULL:   return addNullConstant();
    }
    error("Invalid type of constant");
    return 0;
}

// ============================================================
// БАЗОВЫЕ МЕТОДЫ РАБОТЫ С ТОКЕНАМИ
// ============================================================

void BydaoParser::nextToken() {
    m_pos++;
    if (m_pos < m_tokens.size())
        m_current = m_tokens[m_pos];
}

bool BydaoParser::match(BydaoTokenType type) {
    return m_current.type == type;
}

bool BydaoParser::expect(BydaoTokenType type) {
    if (match(type)) {
        nextToken();
        return true;
    }
    error(QString("Expected %1, got '%2'")
          .arg(int(type))
          .arg(m_current.text));
    return false;
}

bool BydaoParser::peek(BydaoTokenType type, int offset) const {
    int idx = m_pos + offset;
    if (idx >= 0 && idx < m_tokens.size()) {
        return m_tokens[idx].type == type;
    }
    return false;
}

void BydaoParser::error(const QString& msg) {
    m_errors.append( QString("%1 at %2:%3").arg(msg).arg(m_current.line).arg(m_current.column) );
}

void BydaoParser::error(const QString& msg, const BydaoToken& token) {
    m_errors.append( QString("%1 at %2:%3").arg(msg).arg(token.line).arg(token.column) );
}

// ============================================================
// ГЕНЕРАЦИЯ КОДА
// ============================================================

qint16 BydaoParser::emitCode(BydaoOpCode op, qint16 arg1, qint16 arg2) {
    m_bytecode.append(BydaoInstruction(
        op, arg1, arg2,
        (qint16)m_current.line,
        (qint16)m_current.column
    ));
    return m_bytecode.size() - 1;
}

qint16 BydaoParser::emitCode(BydaoOpCode op, qint16 arg1, qint16 arg2, const BydaoToken& token) {
    m_bytecode.append(BydaoInstruction(
        op, arg1, arg2,
        (qint16)token.line,
        (qint16)token.column
    ));
    return m_bytecode.size() - 1;
}

void BydaoParser::patchJump(int instrIndex) {
    if (instrIndex >= 0 && instrIndex < m_bytecode.size()) {
        int target = m_labels[m_bytecode[instrIndex].arg1];
        m_bytecode[instrIndex].arg1 = target;
    }
}

void BydaoParser::patchJumps(const QVector<int>& jumps, int targetAddr) {
    for (int instrIndex : jumps) {
        if (instrIndex >= 0 && instrIndex < m_bytecode.size()) {
            m_bytecode[instrIndex].arg1 = targetAddr;
        }
    }
}

// ============================================================
// ОБЛАСТИ ВИДИМОСТИ
// ============================================================

void BydaoParser::enterScope() {
    m_scopeStart.push( m_varScopes.size() );
}

void BydaoParser::exitScope() {
    if ( m_varScopes.size() > m_scopeStart.top() ) {
        m_varScopes.resize( m_scopeStart.top() );
        emitCode( BydaoOpCode::ScopeDrop, m_scopeStart.top() );
    }
    m_scopeStart.pop();
}

bool BydaoParser::appendVariable(const QString& name, bool isConstant, bool isPublic ) {

//    qDebug() << "appendVariable:" << name << "isConstant =" << isConstant;  // ОТЛАДКА

    // Проверяем, не объявлена ли уже в этой области

    int index = m_varScopes.size();
    if ( index > 0 ) {
        int scopeStart = m_scopeStart.top();
        while ( --index >= scopeStart ) {
            if ( m_varScopes[ index ].name == name ) {
                error("Variable '" + name + "' already declared in this scope");
                return false;
            }
        }
    }

    // Добавляем в список переменных

    VariableInfo info;
    info.name = name;
    info.type = "Null";
    info.varIndex = m_varScopes.size();
    info.isConstant = isConstant;
    info.isPublic = isPublic;

    m_varScopes.append( ScopeItem( name, info ) );

    return true;
}

void BydaoParser::declareVariable(const QString& name, const BydaoToken& token) {

    if ( appendVariable( name, false ) ) {

        // Генерируем VARDECL (имя переменной нужно только для отладки)

        qint16 nameIndex = addString(name);
        emitCode(BydaoOpCode::VarDecl, nameIndex, 0, token);
    }
}

VariableInfo BydaoParser::resolveVariable(const QString& name) {

    int index = m_varScopes.size();
    while ( --index >= 0 ) {
        if ( m_varScopes[ index ].name == name ) {
            return m_varScopes[ index ].varInfo;
        }
    }
    return VariableInfo();
}

bool BydaoParser::isVariableDeclared(const QString& name) {

    int index = m_varScopes.size();
    while ( --index >= 0 ) {
        if ( m_varScopes[ index ].name == name ) {
            return true;
        }
    }
    return false;
}

bool BydaoParser::removeVariable(const QString& name ) {

    int index = m_varScopes.size();
    while ( --index >= 0 ) {
        if ( m_varScopes[ index ].name == name ) {
            m_varScopes.removeAt( index );
            return true;
        }
    }
    return false;
}

void BydaoParser::setVariableType(const QString& name, const QString type, bool isConst) {

    int index = m_varScopes.size();
    while ( --index >= 0 ) {
        if ( m_varScopes[ index ].name == name ) {
            m_varScopes[ index ].varInfo.type = type;
            m_varScopes[ index ].varInfo.isConstant = isConst;
            return;
        }
    }
}

// ============================================================
// ВСТРОЕННЫЕ ТИПЫ
// ============================================================

bool BydaoParser::isNameToken(BydaoTokenType type) const {
    return type == BydaoTokenType::Identifier ||
           type == BydaoTokenType::Iter ||
           type == BydaoTokenType::Enum ||
           type == BydaoTokenType::While ||
           type == BydaoTokenType::If ||
           type == BydaoTokenType::Else ||
           type == BydaoTokenType::Break ||
           type == BydaoTokenType::Next ||
           type == BydaoTokenType::Var ||
           type == BydaoTokenType::Drop ||
           type == BydaoTokenType::Use ||
           type == BydaoTokenType::As;
}

// ============================================================
// МОДУЛИ
// ============================================================

void BydaoParser::addModulePath(const QString& path) {
    QString normalized = QDir::cleanPath(path);
    if (!m_modulePaths.contains(normalized)) {
        m_modulePaths.prepend(normalized);
    }
}

bool BydaoParser::loadMetaData(const QString& name) {
    if (m_metaData.contains(name)) {
        return true;
    }

    QString errorMsg;
    BydaoModule* module = BydaoModuleManager::instance().loadModule( name, &errorMsg );
    if ( ! module ) {
        error("Cannot load module '" + name + "': " + errorMsg);
        return false;
    }

    // Сохраняем мета-данные модуля
    MetaData* metaData = module->metaData();
    if ( ! metaData ) {
        BydaoModuleManager::instance().unloadModule( name );
        error( "Metadata is NULL for module '" + name + "'" );
        return false;
    }
    m_metaData[name] = new MetaData( metaData );

    // Сохраняем мета-данные используемых типов
    UsedMetaDataList usedList = module->usedMetaData();
    foreach ( const UsedMetaData& used, usedList ) {
        if ( ! m_metaData.contains( used.type ) ) {
            m_metaData[ used.type ] = new MetaData( used.metaData );
        }
    }

    BydaoModuleManager::instance().unloadModule( name );
    return true;
}

// ============================================================
// ПАРСИНГ - ОСНОВНЫЕ МЕТОДЫ
// ============================================================

bool BydaoParser::parse() {
    // Глобальная область
    enterScope();

    bool ok = parseProgram();

    exitScope();
    emitCode(BydaoOpCode::Halt);

    return ok && m_errors.isEmpty();
}

bool BydaoParser::parseProgram() {
    while (!match(BydaoTokenType::EndOfFile)) {
        BydaoToken statementToken = m_current;
        int typeStackSize = m_typeStack.size();
        if (!parseStatement()) {
            // Восстановление после ошибки
            while (!match(BydaoTokenType::EndOfFile) &&
                   !match(BydaoTokenType::RBrace) &&
                   !match(BydaoTokenType::Semicolon)) {
                nextToken();
            }
            if (!m_errors.isEmpty()) return false;
        }
        if ( ! checkTypeStack( typeStackSize, statementToken ) ) {
            return false;
        }
    }
    return true;
}

bool BydaoParser::parseStatement() {
    // Проверяем присваивание
    // identifier = expression
    // identifier += expression
    if ( match(BydaoTokenType::Identifier) ) {
        if ( peek(BydaoTokenType::Assign, 1) ) {
            return parseAssign();
        }
        if ( peek(BydaoTokenType::PlusAssign, 1) ) {
            return parseAddAssign();
        }
        if ( peek(BydaoTokenType::MinusAssign, 1) ) {
            return parseSubAssign();
        }
        if ( peek(BydaoTokenType::MulAssign, 1) ) {
            return parseMulAssign();
        }
        if ( peek(BydaoTokenType::DivAssign, 1) ) {
            return parseDivAssign();
        }
        if ( peek(BydaoTokenType::ModAssign, 1) ) {
            return parseModAssign();
        }
    }

    if (match(BydaoTokenType::Pub)) return parsePubDecl();
    if (match(BydaoTokenType::Var)) return parseVarDecl();
    if (match(BydaoTokenType::Const)) return parseConstDecl();
    if (match(BydaoTokenType::While)) return parseWhile();
    if (match(BydaoTokenType::If)) return parseIf();
    if (match(BydaoTokenType::Iter)) return parseIter();
    if (match(BydaoTokenType::Enum)) return parseEnum();
    if (match(BydaoTokenType::Break) || match(BydaoTokenType::Next)) return parseBreakNext();
    if (match(BydaoTokenType::Use)) return parseUse();
    if (match(BydaoTokenType::LBrace)) return parseBlock(true);

    if ( parseExpression() ) return true;

//    error( "Unknown token '" + m_current.text + "'", m_current );
    return false;
}

bool BydaoParser::parseBlock(bool requireBraces) {
    if (requireBraces) {
        if (!expect(BydaoTokenType::LBrace))
            return false;
    }

    enterScope();  // новая область для блока

    while ( ! match( BydaoTokenType::RBrace ) && ! match( BydaoTokenType::EndOfFile ) ) {

        BydaoToken statementToken = m_current;
        int typeStackSize = m_typeStack.size();
        if ( ! parseStatement() ) {
            exitScope();
            return false;
        }
        if ( ! checkTypeStack( typeStackSize, statementToken ) ) {
            return false;
        }
    }

    exitScope();

    if (requireBraces) {
        if (!expect(BydaoTokenType::RBrace))
            return false;
    }

    return true;
}

// ============================================================
// ВСПОМОГАТЕЛЬНЫЕ ФУНКЦИИ ПРОВЕРКИ ТИПОВ
// ============================================================

bool    BydaoParser::checkTypeStack( int typeStackSize, const BydaoToken& statementToken ) {
    if ( m_typeStack.size() > typeStackSize ) {
        TypeInfo typeInfo = getLastType();
        if ( typeInfo.type != "Void" ) {
            error("Invalid statement type '" + typeInfo.type +  "'", statementToken );
            return false;
        }
    }
    return true;
}

bool    BydaoParser::checkTypeConvert( const QString& typeName, const BydaoToken& token ) {
    TypeInfo typeInfo = getLastType();
    if ( typeInfo.type != typeName ) {
        return checkTypeConvert( typeInfo.type, typeName, token );
    }
    return true;
}

bool    BydaoParser::checkTypeConvert( const QString& fromType, const QString& toType, const BydaoToken& token ) {
    MetaData* metaData = m_metaData[ fromType ];
    if ( ! metaData) {
        error( "Unknown type '" + fromType + "'" , token );
        return false;
    }
    if ( ! metaData->hasFunc("to" + toType) ) {
        error( "Operand cannot be converted to '" + toType + "'", token );
        return false;
    }
    return true;
}

bool    BydaoParser::checkTypeOper( const QString& typeName, const QString& operName, const BydaoToken& token ) {
    MetaData* metaData = m_metaData[ typeName ];
    if ( ! metaData ) {
        error( "Unknown type '" + typeName + "'" , token );
        return false;
    }
    if ( ! metaData->hasOper( operName ) ) {
        error( "Cannot compare operand of type '" + typeName + "'", token );
        return false;
    }
    return true;
}

bool    BydaoParser::isTypeExtend( const QString& typeName, const QString& extendTypeName, const BydaoToken& token ) {
    MetaData* metaData = m_metaData[ typeName ];
    if ( ! metaData) {
        error( "Unknown type '" + typeName + "'" , token );
        return false;
    }
    while ( metaData->extend != extendTypeName ) {
        if ( metaData->extend.isEmpty() ) {
            return false;
        }
        metaData = m_metaData[ metaData->extend ];
        if ( ! metaData ) {
            return false;
        }
    }
    return true;
}

/**
 * Получить тип результата операции с двумя операндами.
 *
 * @param leftType тип левого операнда
 * @param rightType тип правого операнда
 * @param operName название операции
 * @param token токен правого операнда для вывода ошибки
 *
 * @return Возвращает пустую строку при ошибке или название типа резуьтата операции.
 */
QString     BydaoParser::getResultType( const QString& leftType, const QString& rightType, const QString& operName, const BydaoToken& token ) {
    MetaData* metaData = m_metaData[ leftType ];
    if ( ! metaData ) {
        error( "Unknown type '" + leftType + "'" , token );
        return QString();
    }
    OperMetaData operMetaData = metaData->oper( operName );
    if ( operMetaData.hasOperandType( rightType ) ) {
        return operMetaData.resultType( rightType );
    }
    if ( operMetaData.hasOperandType( "Any" ) ) {
        if ( ! checkTypeConvert( rightType, leftType, token ) ) {
            return QString();
        }
        return operMetaData.resultType( "Any" );
    }
    return QString();
}

/**
 * Получить тип результата унарной операции.
 *
 * @param type тип операнда
 * @param operName название операции
 * @param token токен операнда для вывода ошибки
 *
 * @return Возвращает пустую строку при ошибке или название типа резуьтата операции.
 */
QString     BydaoParser::getResultType( const QString& type, const QString& operName, const BydaoToken& token ) {
    MetaData* metaData = m_metaData[ type ];
    if ( ! metaData ) {
        error( "Unknown type '" + type + "'" , token );
        return QString();
    }
    OperMetaData operMetaData = metaData->oper( operName );
    if ( operMetaData.hasOperandType( "" ) ) {
        return operMetaData.resultType( "" );
    }
    return QString();
}

// ============================================================
// ПАРСИНГ - ОПЕРАТОРЫ
// ============================================================

bool BydaoParser::parsePubDecl() {
    BydaoToken pubToken = m_current;
    nextToken(); // pub

    // После pub может быть var или const
    if (match(BydaoTokenType::Var)) {
        return parseVarDecl(true);  // true = публичная
    }
    if (match(BydaoTokenType::Const)) {
        return parseConstDecl(true); // true = публичная
    }

    error("Expected 'var' or 'const' after 'pub'");
    return false;
}

/**
 * Определение новой переменной: "var" name [ "=" expr ]
 */
bool BydaoParser::parseVarDecl( bool isPublic ) {
    BydaoToken token = m_current;
    nextToken(); // var

    if (!match(BydaoTokenType::Identifier)) {
        error("Expected variable name");
        return false;
    }

    QString name = m_current.text;
    BydaoToken nameToken = m_current;
    nextToken();

    // Добавляем переменную с флагом public
    if (!appendVariable(name, false, isPublic)) {  // false = не константа
        return false;
    }

    VariableInfo info = resolveVariable(name);

    // Генерируем код (как обычно)
    qint16 nameIndex = addString(name);

    int valueIndex = 0;  // без инициализации
    if (match(BydaoTokenType::Assign)) {    // с инициализацией

        nextToken();

        BydaoToken exprToken = m_current;
        if (!parseExpression()) return false;

        if ( m_typeStack.size() == 0 ) {
            error("Internal error: empty stack of value types");
            return false;
        }
        TypeInfo typeInfo = getLastType();
        if ( typeInfo.type == "Void" ) {
            error("Cannot assign void value", exprToken );
            return false;
        }
        setVariableType( name, typeInfo.type );

        int size = m_bytecode.size();
        if ( m_bytecode[ size-1 ].op == BydaoOpCode::PushConst ) {

            // Инициализация переменной константным значением

            valueIndex = -m_bytecode.takeLast().arg1;
        }
        else {

            // Инициализация значением со стека значений
            valueIndex = 1;
        }
    }

    emitCode(BydaoOpCode::VarDecl, nameIndex, valueIndex, token);

    return true;
}

bool BydaoParser::parseConstDecl( bool isPublic ) {
//    qDebug() << "parseConstDecl: start at line" << m_current.line;
    nextToken(); // const

    if (!match(BydaoTokenType::Identifier)) {
        error("Expected constant name");
        return false;
    }

    QString name = m_current.text;
    BydaoToken nameToken = m_current;
    nextToken();

    if (!match(BydaoTokenType::Assign)) {
        error("Expected '=' in constant declaration");
        return false;
    }
    nextToken(); // '='

    // Добавляем константу в таблицу (без значения)
    if (!appendVariable(name, true, isPublic)) {
        return false;
    }

    // Пытаемся вычислить выражение
    BydaoToken exprToken = m_current;
    BydaoConstantFolder folder(this);
    BydaoValue constValue = folder.evaluate();  // Один проход!
    if ( ! constValue.isObject() ) {
        removeVariable(name);
        error("Constant expression expected");
        return false;
    }

    // Обновляем значение в таблице

    VariableInfo info = resolveVariable(name);
    m_varScopes[ info.varIndex ].varInfo.type = constValue.toObject()->typeName();
    m_varScopes[ info.varIndex ].varInfo.constValue = constValue;

    // Добавляем значение в таблицу констант и генерируем PUSH
    qint16 constIndex = addConstant( constValue );
    if ( constIndex == 0 ) {
        removeVariable(name);
        error("Invalid constant expression", exprToken);
        return false;
    }

    // Генерируем код
    qint16 nameIndex = addString(name);
    //    qDebug() << "  generating VarDecl for" << name << "index =" << nameIndex;
    emitCode(BydaoOpCode::ConstDecl, nameIndex, constIndex, nameToken);

    return true;
}

bool BydaoParser::parseAssign() {
    QString name = m_current.text;
    BydaoToken nameToken = m_current;

    if (!isVariableDeclared(name)) {
        error("Undeclared variable: " + name);
        return false;
    }

    // ПРОВЕРКА НА КОНСТАНТУ
    VariableInfo varInfo = resolveVariable(name);
    if (varInfo.isConstant) {
        error("Cannot assign to constant: " + name);
        return false;
    }

    nextToken(); // must be '='
    if ( ! expect( BydaoTokenType::Assign ) ) {
        error("Unexpected expression after identifier");
        return false;
    }

    if (!parseExpression()) {
        return false;
    }
    TypeInfo exprType = getLastType();

    QString varType = varInfo.type;
    if ( varType != "Null" && varType != exprType.type ) {
        error( "Cannot assign value of type '" + exprType.type + "' to variable of type '" + varType + "'", nameToken );
        return false;
    }
    setVariableType( name, exprType.type );

    int rightIndex = 0;
    int size = m_bytecode.size();
    if ( m_bytecode[size-1].op == BydaoOpCode::VarAdd ) {

        if ( m_bytecode[size-1].arg1 == varInfo.varIndex ) {

            // Левый операнд сложения является переменной присвоения

            int rightVarIndex = m_bytecode.takeLast().arg2;
            emitCode(BydaoOpCode::AddStore, varInfo.varIndex, rightVarIndex, nameToken);
            return true;
        }
    }
    else if ( m_bytecode[size-1].op == BydaoOpCode::Load ) {

        // Присвение переменной

        rightIndex = m_bytecode.takeLast().arg1;
    }
    else if ( m_bytecode[size-1].op == BydaoOpCode::PushConst ) {

        // Присвение константы

        rightIndex = -m_bytecode.takeLast().arg1;
    }

    emitCode(BydaoOpCode::Store, varInfo.varIndex, rightIndex, nameToken);
    return true;
}

bool BydaoParser::parseAddAssign() {
    QString name = m_current.text;
    BydaoToken nameToken = m_current;

    if (!isVariableDeclared(name)) {
        error("Undeclared variable: " + name);
        return false;
    }

    // ПРОВЕРКА НА КОНСТАНТУ
    VariableInfo info = resolveVariable(name);
    if (info.isConstant) {
        error("Cannot assign to constant: " + name);
        return false;
    }

    nextToken(); // identifier
    if ( ! expect( BydaoTokenType::PlusAssign ) ) {
        error("Unexpected expression after identifier");
        return false;
    }

    BydaoToken exprToken = m_current;
    if (!parseExpression()) {
        return false;
    }
    TypeInfo exprTypeInfo = getLastType();

    // Проверить, что тип переменной поддерживает операцию "+"

    QString varType = info.type;
    if ( varType == "Null" ) {
        error( "Operation '+=' cannot be applied to uninitialized variable", nameToken );
        return false;
    }

    // Проверить наличие операции сложения для левого операнда

    QString operName("addToValue");
    if ( ! checkTypeOper( varType, operName, nameToken ) ) {
        return false;
    }

    // Определить тип результат операции

    QString exprType = exprTypeInfo.type;
    if ( varType != exprType ) {

        // Проверить возможность использования правого операнда в операции
        // сложения с левым операндом

        QString resultType = getResultType( varType, exprType, operName, exprToken );
        if ( resultType.isEmpty() || resultType != "Void" ) {
            error( "Operation '+=' cannot be applied to a value of type '" + exprType + "'", exprToken );
            return false;
        }
    }

    int rightVarIndex = 0;
    int size = m_bytecode.size();
    if ( m_bytecode[size-1].op == BydaoOpCode::Load ) {

        rightVarIndex = m_bytecode.takeLast().arg1;
    }
    else if ( m_bytecode[size-1].op == BydaoOpCode::PushConst ) {

        rightVarIndex = -m_bytecode.takeLast().arg1;
    }

    emitCode(BydaoOpCode::AddStore, info.varIndex, rightVarIndex, nameToken);
    return true;
}

bool BydaoParser::parseSubAssign() {
    QString name = m_current.text;
    BydaoToken nameToken = m_current;

    if (!isVariableDeclared(name)) {
        error("Undeclared variable: " + name);
        return false;
    }

    // ПРОВЕРКА НА КОНСТАНТУ
    VariableInfo info = resolveVariable(name);
    if (info.isConstant) {
        error("Cannot assign to constant: " + name);
        return false;
    }

    nextToken(); // identifier
    if ( ! expect( BydaoTokenType::MinusAssign ) ) {
        error("Unexpected expression after identifier");
        return false;
    }

    if (!parseExpression()) {
        return false;
    }

    emitCode(BydaoOpCode::SubStore, info.varIndex, 0, nameToken);

    return true;
}

bool BydaoParser::parseMulAssign() {
    QString name = m_current.text;
    BydaoToken nameToken = m_current;

    if (!isVariableDeclared(name)) {
        error("Undeclared variable: " + name);
        return false;
    }

    // ПРОВЕРКА НА КОНСТАНТУ
    VariableInfo info = resolveVariable(name);
    if (info.isConstant) {
        error("Cannot assign to constant: " + name);
        return false;
    }

    nextToken(); // identifier
    if ( ! expect( BydaoTokenType::MulAssign ) ) {
        error("Unexpected expression after identifier");
        return false;
    }

    if (!parseExpression()) {
        return false;
    }

    emitCode(BydaoOpCode::MulStore, info.varIndex, 0, nameToken);

    return true;
}

bool BydaoParser::parseDivAssign() {
    QString name = m_current.text;
    BydaoToken nameToken = m_current;

    if (!isVariableDeclared(name)) {
        error("Undeclared variable: " + name);
        return false;
    }

    // ПРОВЕРКА НА КОНСТАНТУ
    VariableInfo info = resolveVariable(name);
    if (info.isConstant) {
        error("Cannot assign to constant: " + name);
        return false;
    }

    nextToken(); // identifier
    if ( ! expect( BydaoTokenType::DivAssign ) ) {
        error("Unexpected expression after identifier");
        return false;
    }

    if (!parseExpression()) {
        return false;
    }

    emitCode(BydaoOpCode::DivStore, info.varIndex, 0, nameToken);

    return true;
}

bool BydaoParser::parseModAssign() {
    QString name = m_current.text;
    BydaoToken nameToken = m_current;

    if (!isVariableDeclared(name)) {
        error("Undeclared variable: " + name);
        return false;
    }

    // ПРОВЕРКА НА КОНСТАНТУ
    VariableInfo info = resolveVariable(name);
    if (info.isConstant) {
        error("Cannot assign to constant: " + name);
        return false;
    }

    nextToken(); // identifier
    if ( ! expect( BydaoTokenType::ModAssign ) ) {
        error("Unexpected expression after identifier");
        return false;
    }

    if (!parseExpression()) {
        return false;
    }

    emitCode(BydaoOpCode::ModStore, info.varIndex, 0, nameToken);

    return true;
}

bool BydaoParser::parseIf() {
    BydaoToken ifToken = m_current;
    nextToken(); // if

    BydaoToken exprToken = m_current;
    if (!parseExpression()) {
        return false;
    }
    TypeInfo exprTypeInfo = getLastType();
    if ( exprTypeInfo.type != "Bool" ) {

        if ( ! checkTypeConvert( exprTypeInfo.type, "Bool", exprToken ) ) {
            return false;
        }
    }

    // Условный переход на else/elsif
    int elseJump = emitCode(BydaoOpCode::JumpIfFalse, 0, 0, ifToken);

    if (!parseBlock(true)) {
        return false;
    }

    int endJump = emitCode(BydaoOpCode::Jump, 0, 0, ifToken);

    // Патчим условный переход на текущую позицию
    m_bytecode[elseJump].arg1 = m_bytecode.size();

    // Обрабатываем elsif
    while ( match(BydaoTokenType::Elsif) ) {

        BydaoToken elsifToken = m_current;
        nextToken(); // elsif

        exprToken = m_current;
        if (!parseExpression()) {
            return false;
        }
        exprTypeInfo = getLastType();
        if ( exprTypeInfo.type != "Bool" ) {

            if ( ! checkTypeConvert( exprTypeInfo.type, "Bool", exprToken ) ) {
                return false;
            }
        }

        int condJump = emitCode(BydaoOpCode::JumpIfFalse, 0, 0, elsifToken);

        if (!parseBlock(true)) {
            return false;
        }

        emitCode(BydaoOpCode::Jump, endJump, 0);

        m_bytecode[condJump].arg1 = m_bytecode.size();
    }
